--- a/index.html
+++ b/index.html
@@ -1,8 +1,35 @@
 <html>
+
 <head>
-<title>Smagus</title>
+    <title>Smagus</title>
+    <style>
+        html,
+        body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
+            background-color: black;
+        }
+
+        .logo {
+            display: block;
+            width: 40%;
+        }
+
+        .container {
+            height: 80%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
+
 <body>
-<h1>Hello World!<h1/>
+    <div class="container">
+        <img class="logo" src="logo.png" alt="Smagus logo" />
+    </div>
 </body>
+
 </html>
